# Rust_Local_SQL_Tool

./: .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.e2e.yml
.codex/: TASKS.md
.github/workflows/: ci.yml  mirror-to-gitee.yml
agents/: registry.json
agents/specs/v1/: policy.json
core_lib/: Cargo.toml
core_lib/src/: ai_agent.rs  config.rs  crud.rs  db.rs  db_capability.rs  db_protocol.rs  error.rs  knowledge_base.rs  lib.rs  loadgen.rs  mysql_sync.rs  navicat.rs  offline_parser.rs  perf_report.rs  rule_engine.rs  rule_matcher.rs  schema.rs  schema_ext.rs  sql_history.rs  sync.rs  template.rs  timeout_policy.rs  tools.rs  transfer.rs
core_lib/src/ai/: extractor.rs  gateway.rs  mod.rs  planner.rs  policy_store.rs  prompting.rs
core_lib/tests/: timeout_policy_test.rs
e2e-runner/: Cargo.toml
e2e-runner/src/: main.rs
web-server/: Cargo.toml
web-server/src/: ai_handlers.rs  main.rs
web-ui/: eslint.config.js  fix_any.py  fix_any_script.py  fix_catch.py  fix_err.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  undo_any_script.py  vite.config.ts  vitest.config.ts
web-ui/scripts/: e2e-smoke.mjs
web-ui/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  queryAiActions.ts  sqlStatements.test.ts  sqlStatements.ts  types.ts  utils.test.ts  utils.ts
web-ui/src-tauri/: Cargo.toml  tauri.conf.json
web-ui/src-tauri/src/: lib.rs
web-ui/src/components/: AdvancedToolsHub.tsx  AiTrainingPanel.tsx  CommandPalette.tsx  DataCharts.tsx  DataSync.tsx  DataTable.tsx  DataTransfer.tsx  DbEventsTriggers.tsx  DbExplorerSidebar.tsx  DbSecurityManager.tsx  DiffViewer.tsx  ErrorBoundary.tsx  ExecutionPlan.tsx  GoLive.tsx  GoLiveAuditTab.tsx  GoLiveReportsTab.tsx  ImportWizard.tsx  MockDataConfig.tsx  ModelCompare.tsx  Onboarding.tsx  PerfDiagnosticsPanel.tsx  PerfSync.tsx  QueryBuilder.tsx  QueryEditorActionPanel.tsx  QueryResultsPanel.tsx  SchemaView.tsx  SessionInfoPanel.tsx  SettingsPanel.tsx  SimpleDataTable.tsx  Skeleton.tsx  SqlHistory.tsx  StepWizard.tsx  StructureSync.tsx  TableContextMenu.tsx  TableDataView.tsx  TableDesigner.tsx  TableWorkspace.tsx  Tabs.tsx  Toast.tsx  ToolsNav.tsx  (+3 more)
web-ui/src/utils/: ErrorDictionary.ts  dbCapabilities.ts
