[workspace]
members = [
    "core_lib",
    "web-server",
    "e2e-runner"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
crc32fast = "1.4"
