[package]
name = "core_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
roxmltree = "0.21.1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
strsim = "0.11.1"
sqlparser = "0.61.0"
chrono = "0.4.44"
csv = "1.3.0"
crc32fast = { workspace = true }
