[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
core_lib = { path = "../core_lib" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true, features = ["chrono"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v4"] }
futures = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
sha2 = "0.10.9"
tokio-util = { version = "0.7.16", features = ["io"] }
reqwest = { workspace = true, features = ["multipart"] }

[dev-dependencies]
tower = "0.5"
