[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
core_lib = { path = "../../core_lib" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.37", features = ["sync", "time"] }

[workspace]
